chore: update service ports, standardize database credentials, and externalize service URIs in API Gateway configuration